[tool.poetry]
name = "poe"
version = "0.0.1"
description = "Where am i?"
authors = ["darlene0101"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.11.4"
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
